docs: Stage 3 - Tutorial generation (18 files) [skip ci]